# CS-435-Parallel-and-Distributed-Processing

./: CMakeLists.txt  README.md
include/: laplace.hpp
scripts/: plot.py  run.slurm
src/: benchmark.cpp  laplace.cpp  mpi_laplace.cpp
